--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/sorenjuul/ddb-sample-app#readme",
   "dependencies": {
     "next": "^1.1.2",
+    "react": "^16.2.0",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
